some socket and node module changes

--- a/front/main.html
+++ b/front/main.html
@@ -2,14 +2,14 @@
 <html onscroll="smooth()">
 <head>
 	<link rel="stylesheet" type="text/css" href="project.css">
-	<script src="back.js"></script>
-	<title>practical_1</title>
+	<script src="project.js"></script>
+	<title>Public Key chat</title>
 </head>
 <body>
 	<div id="top">
 		Messages below
 	</div>
-	<form method="post" action="/">
+	<form id="main_form" method="post" action="">
 		<div class="output_pad">
 			<br>
 			<select class="stroutput1" id="stroutput1" name="user[display1]" ></select>
